# qwtplot3d

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  licence  object_script.libqwtplot3d.Debug  object_script.qwtplot3d.Release  qwtplot3d.pri  qwtplot3d.pro  readme.md
.github/workflows/: build.yml  release.yml
include/: qwt3d_axis.h  qwt3d_colorlegend.h  qwt3d_enrichment.h  qwt3d_enrichment_std.h  qwt3d_extglwidget.h  qwt3d_global.h  qwt3d_io_gl2ps.h  qwt3d_openglhelper.h  qwt3d_plot.h  qwt3d_portability.h  qwt3d_surfaceplot.h
src/: qwt3d_axis.cpp  qwt3d_coordsys.cpp  qwt3d_drawable.cpp  qwt3d_enrichment_std.cpp  qwt3d_extglwidget.cpp  qwt3d_io.cpp  qwt3d_io_gl2ps.cpp  qwt3d_io_reader.cpp  qwt3d_label.cpp  qwt3d_lighting.cpp  qwt3d_mousekeyboard.cpp  qwt3d_movements.cpp  qwt3d_plot.cpp  qwt3d_scale.cpp  qwt3d_surfaceplot.cpp
